--- a/src/app/add-shoppingcart/add-shoppingcart.component.html
+++ b/src/app/add-shoppingcart/add-shoppingcart.component.html
@@ -5,30 +5,30 @@
             <div class="row g-3 mt-4">
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Product Title</label>
-                    <input type="text" class="form-control">
+                    <input name="productTitle"[(ngModel)]="productTitle" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Product Image</label>
-                    <input type="file" name="" id="" class="form-control">
+                    <input name="productImage"[(ngModel)]="productImage" type="file" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Description</label>
-                    <input type="text" class="form-control">
+                    <input name="description"[(ngModel)]="description" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Rate</label>
-                    <input type="text" class="form-control">
+                    <input name="rate"[(ngModel)]="rate" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Seller Name</label>
-                    <input type="text" class="form-control">
+                    <input name="sellerName"[(ngModel)]="sellerName" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Quantity</label>
-                    <input type="text" class="form-control">
+                    <input name="quantity"[(ngModel)]="quantity" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <button class="btn btn-success">Submit</button>
+                    <button (click)="readValues()" class="btn btn-success">Submit</button>
                 </div>
             </div>
         </div>
